Update Nginx configuration + README

--- a/Project_2/nginx.conf
+++ b/Project_2/nginx.conf
@@ -1,4 +1,3 @@
-# Plik konfiguracyjny Nginx
 
 events {}
 
@@ -10,24 +9,17 @@ http {
             proxy_pass http://app-g:8080;
         }
 
-        # Blok location dla /health
         location /health {
             return 200 "I am healthy\n";
         }
     }
 
-    # Blok server dla portu 9001
     server {
         listen 9001;
 
         # Przekierowanie na /health
         location / {
-            return 302 /health;
-        }
-
-        # Blok location dla /health na porcie 9001
-        location /health {
-            return 200 "I am healthy\n";
+            return 302 "http://localhost/health";
         }
     }
 }
